[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixwin"
version = "0.0.1"
authors = [
    { name="winstxnhdw", email="author@example.com" },
]
description = "A fast Python API for retrieving RGB values of a pixel on Windows using ctypes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/winstxnhdw/PixWin"
"Bug Tracker" = "https://github.com/winstxnhdw/PixWin/issues"

[tool.setuptools]
packages = ["pixwin.libs.get_pixel"]

[tool.pylint.format]
good-names = [
    "x", "y", "z"
]

[tool.pylint.message_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module"
]
