[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pixwin"
version = "0.1.0"
requires-python = ">=3.8"
description = "A fast Python API for retrieving RGB values of a pixel on Windows using ctypes."
authors = [{ name = "winstxnhdw", email = "you@example.com" }]
maintainers = [{ name = "winstxnhdw", email = "you@example.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry]
name = "pixwin"
version = "0.1.0"
description = "A fast Python API for retrieving RGB values of a pixel on Windows using ctypes."
authors = ["winstxnhdw <you@example.com>"]

[tool.poetry.urls]
"Homepage" = "https://github.com/winstxnhdw/PixWin"
"Bug Tracker" = "https://github.com/winstxnhdw/PixWin/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.391"
pylint = "^3.2.7"
pytest = "^8.3.4"
ruff = "^0.9.1"
setuptools = "^75.3.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.setuptools]
include-package-data = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.pylint.format]
good-names = ["x", "y", "z"]

[tool.pylint.message_control]
disable = [
    "missing-module-docstring",
    "no-name-in-module",
    "useless-import-alias",
    "line-too-long",
    "duplicate-code",
]
